--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -20,9 +21,11 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.0.0",
     "mongoose": "^6.9.0",
+    "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
     "puppeteer": "^19.6.3",
     "razorpay": "^2.8.4",
+    "sharp": "^0.31.3",
     "shortid": "^2.2.16",
     "validator": "^13.9.0"
   },
