--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "mongoose": "^6.9.0",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
+    "puppeteer": "^19.7.4",
     "razorpay": "^2.8.4",
     "sharp": "^0.31.3",
     "shortid": "^2.2.16",
